# network_science_training

./: data_to_neworks.ipynb  environment.yml  friendships.ipynb  generate_network_with_code.ipynb  karate_club_graph.ipynb  my_first_network.ipynb  out.adjlist  out.edgelist  out.gefx  pyproject.toml
