[tool.poetry]
name = "network-science-training"
version = "0.1.0"
description = ""
authors = ["Larry Johnson <johnson.larry.l@fintorian.com>"]

[tool.poetry.dependencies]
pandas = "^1.5.2"
python = "^3.9"
matplotlib = "^3.6.3"
networkx = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
